compiler/tests/compile-error/syntax-error.arret
(this is invalid]
               ;^ ERROR unexpected `]` while parsing list